--- a/scripts/test/llikEmulator_tests.Rmd
+++ b/scripts/test/llikEmulator_tests.Rmd
@@ -19,34 +19,45 @@ src_dir <- file.path(base_dir, "src")
 
 source(file.path(src_dir, "gpWrapper.r"))
 source(file.path(src_dir, "llikEmulator.r"))
+source(file.path(src_dir, "sim_study_functions.r"))
+source(file.path(src_dir, "mcmc_calibration_functions.r"))
 ```
 
 ```{r}
-set.seed(10)
+global_seed <- 22
+data_seed <- 9
+
+set.seed(global_seed)
 ```
 
 
 ```{r}
 #
-# Test datasets for code validation. 
+# Linear Gaussian Model to perform tests.  
 #
 
-# 1D input, 2D output, noisy observations. 
-f1 <- function(x) cbind(x^2, 3*x^3)
-X1 <- matrix(seq(10,20,length.out=5), ncol=1)
-Y1 <- f1(X1) + cbind(5*rnorm(nrow(X1)), 30*rnorm(nrow(X1)))
-Y1[sample.int(nrow(Y1), 1), 1] <- NA_real_
-X1_new <- matrix(seq(10,20, length.out=101), ncol=1)
-Y1_new_noiseless <- f1(X1_new)
+N_obs <- 100
+N_missing_output1 <- 4
+N_missing_output2 <- 6
 
-# 2D input, 1D output, noiseless observations. 
-f2 <- function(x) matrix(3*x[,1]^2 - 2*x[,2]^3, ncol=1)
-X2 <- randomLHS(25, 2)
-Y2 <- f2(X2)
-Y2[sample.int(nrow(Y2), 4),] <- NA_real_
-X2_new <- as.matrix(expand.grid(seq(0,1, length.out=51), 
-                                seq(0,1, length.out=51)))
-Y2_new <- f2(X2_new)
+# 1D input, 2D output, some missing observations. 
+G1_mat <- sin(2*pi*seq(1,N_obs)/N_obs)
+G2_mat <- cos(2*pi*3*seq(1,N_obs)/N_obs)
+G <- function(U) cbind(G1_mat %*% t(U), G2_mat %*% t(U))
+u_true <- matrix(rnorm(1, 0, 3), nrow=1)
+sig2_true <- c(1, 1.5)
+G_true <- G(u_true)
+Y <- G_true + cbind(rnorm(N_obs, 0, sqrt(sig2_true[1])), 
+                    rnorm(N_obs, 0, sqrt(sig2_true[2])))
+Y[sample.int(N_obs, N_missing_output1),1] <- NA_real_
+Y[sample.int(N_obs, N_missing_output2),2] <- NA_real_
+
+for(p in 1:ncol(Y)) {
+  plot(1:N_obs, Y[,p], main=paste0("Ground Truth and Observed Data: Output ", p), 
+       xlab="t", ylab="y")
+  lines(1:N_obs, G_true[,p], col="red")
+}
+
 ```
 
 
