--- a/scripts/test/llikEmulator_tests.Rmd
+++ b/scripts/test/llikEmulator_tests.Rmd
@@ -28,7 +28,7 @@ source(file.path(src_dir, "mcmc_calibration_functions.r"))
 global_seed <- 22
 data_seed <- 9
 
-set.seed(global_seed)
+set.seed(22)
 ```
 
 
@@ -45,18 +45,20 @@ u_bound_upper <- 3
 u_prior <- data.frame(dist="Uniform", param1=u_bound_lower, param2=u_bound_upper)
 
 # 1D input, 2D output, some missing observations.
-G1_mat <- sin(2*pi*seq(1,N_obs)/N_obs)
-G2_mat <- cos(2*pi*3*seq(1,N_obs)/N_obs)
-G <- function(U, ...) cbind(y1=G1_mat %*% t(U), y2=G2_mat %*% t(U))
+G1_mat <- matrix(sin(2*pi*seq(1,N_obs)/N_obs), ncol=1)
+G2_mat <- matrix(cos(2*pi*3*seq(1,N_obs)/N_obs), ncol=1)
+G <- function(U, ...) abind(y1=G1_mat %*% t(U), y2=G2_mat %*% t(U), along=3)
+G_old <- function(u, ...) cbind(y1=u*G1_mat, y2=u*G2_mat)
+
 u_true <- matrix(runif(1, min=u_bound_lower, max=u_bound_upper), nrow=1)
 sig2_true <- c(1, 1.5)
-G_true <- G(u_true)
+G_true <-  G(u_true)[,1,]
 Y <- G_true + cbind(rnorm(N_obs, 0, sqrt(sig2_true[1])),
                     rnorm(N_obs, 0, sqrt(sig2_true[2])))
 Y[sample.int(N_obs, N_missing_output1),1] <- NA_real_
 Y[sample.int(N_obs, N_missing_output2),2] <- NA_real_
 colnames(Y) <- c("y1", "y2")
-computer_model_data <- list(data_obs=Y, f=G, output_vars=c("y1", "y2"))
+computer_model_data <- list(data_obs=Y, f=G_old, output_vars=c("y1", "y2"))
 
 for(p in 1:ncol(Y)) {
   plot(1:N_obs, Y[,p], main=paste0("Ground Truth and Observed Data: Output ", p),
@@ -90,42 +92,51 @@ N_test <- 51
 input_bounds <- rbind(u_bound_lower, u_bound_upper)
 rownames(input_bounds) <- c("min", "max")
 
-# Generate latin hypercube design. 
+# Generate latin hypercube designs. 
 design_info <- get_input_output_design(N_points=N_design,
                                        design_method="LHS", 
                                        scale_inputs=FALSE,
                                        normalize_response=FALSE,
                                        param_ranges=input_bounds,  
-                                       computer_model_data=computer_model_data_1, 
+                                       computer_model_data=computer_model_data, 
                                        theta_prior_params=u_prior)
+design_info_1 <- design_info
+design_info_1$outputs <- design_info_1$outputs[,1,drop=FALSE]
 
 # Validation data. 
 test_info <- get_input_output_design(N_points=N_test,
-                                     design_method="grid", 
-                                     scale_inputs=FALSE,
-                                     normalize_response=FALSE,
-                                     param_ranges=input_bounds,  
-                                     computer_model_data=computer_model_data_1, 
-                                     theta_prior_params=u_prior)
+                                       design_method="grid", 
+                                       scale_inputs=FALSE,
+                                       normalize_response=FALSE,
+                                       param_ranges=input_bounds,  
+                                       computer_model_data=computer_model_data, 
+                                       theta_prior_params=u_prior)
+test_info_1 <- test_info
+test_info_1$outputs <- test_info_1$outputs[,1,drop=FALSE]
 ```
 
 ```{r}
 # True likelihood for validation inputs. 
-llik1_true <- vector(mode="numeric", length=N_test)
-G_test_true_1 <- G_1(test_info$inputs)
+llik_true <- matrix(nrow=N_test, ncol=2)
+colnames(llik_true) <- c("y1", "y2")
+G_test_true <- G(test_info$inputs)
 
-for(i in seq_along(llik1_true)) {
-  llik1_true[i] <- sum(dnorm(drop(Y_1), mean=G_test_true_1[,i], sd=sqrt(sig2_true_1), log=TRUE), na.rm=TRUE)
+for(i in 1:N_test) {
+  for(j in 1:2) {
+    llik_true[i,j] <- sum(dnorm(Y[,j], mean=G_test_true[,i,j], sd=sqrt(sig2_true[j]), log=TRUE), na.rm=TRUE)
+  }
 }
+
+llik_true_1 <- llik_true[,1,drop=FALSE]
 
 ```
 
 
-# Testing llikEmulator Class using 1D output example. 
+# Testing llikEmulatorMultGausGP Class using 1D output example. 
 
 ```{r}
 # First fit GP emulator. 
-gp1 <- gpWrapperHet(design_info$inputs, design_info$outputs, normalize_output=TRUE, scale_input=TRUE)
+gp1 <- gpWrapperHet(design_info_1$inputs, design_info_1$outputs, normalize_output=TRUE, scale_input=TRUE)
 gp1$fit("Gaussian", "constant")
 ```
 
@@ -133,34 +144,81 @@ gp1$fit("Gaussian", "constant")
 ```{r}
 # TODO: check issue with Matern kernel. 
 # Predict. 
-gp1$plot_pred_1d(test_info$inputs, Y_new=test_info$outputs)
+gp1$plot_pred_1d(test_info_1$inputs, Y_new=test_info_1$outputs)
 ```
 ```{r}
 # Create llikEmulatorMultGausGP object. 
 llik_emulator1 <- llikEmulatorMultGausGP(gp1, N_obs=sum(!is.na(Y_1)), sig2=NULL, 
                                          default_conditional=FALSE, default_normalize=FALSE, 
                                          lik_par_fixed=FALSE)
-llik_design <- llik_emulator1$assemble_llik(design_info$outputs, sig2_true_1, normalize=TRUE)
+llik_design_1 <- llik_emulator1$assemble_llik(design_info_1$outputs, sig2_true_1, normalize=TRUE)
 ```
 
 ```{r}
-# Sample llik emulator: not using cross-input covaraince. 
-llik_samples1 <- llik_emulator1$sample(test_info$inputs, sig2=sig2_true_1, N_samp=10, use_cov=FALSE, 
-                                       include_nugget=TRUE, normalize=TRUE)
+# Sample llik emulator: not using cross-input covariance. 
+llik_samples_1 <- llik_emulator1$sample(test_info_1$inputs, sig2=sig2_true_1, N_samp=10, use_cov=FALSE, 
+                                        include_nugget=TRUE, normalize=TRUE)
 
-matplot(test_info$inputs, llik_samples1, type="l", col="gray", main="llik samples, no-cov")
-matlines(test_info$inputs, llik1_true, col="red")
-matpoints(design_info$inputs, llik_design, col="red", pch="o")
+matplot(test_info_1$inputs, llik_samples_1, type="l", col="gray", main="llik samples, no-cov")
+matlines(test_info_1$inputs, llik_true_1, col="red")
+matpoints(design_info_1$inputs, llik_design_1, col="red", pch="o")
 
 # Sample llik_emulator: using cross-input covariance.
-llik_samples1 <- llik_emulator1$sample(test_info$inputs, sig2=sig2_true_1, N_samp=10, use_cov=TRUE, 
-                                       include_nugget=TRUE, normalize=TRUE)
+llik_samples_1 <- llik_emulator1$sample(test_info_1$inputs, sig2=sig2_true_1, N_samp=10, use_cov=TRUE, 
+                                        include_nugget=TRUE, normalize=TRUE)
 
-matplot(test_info$inputs, llik_samples1, type="l", col="gray", main="llik samples, cov")
-matlines(test_info$inputs, llik1_true, col="red")
-matpoints(design_info$inputs, llik_design, col="red", pch="o")
+matplot(test_info_1$inputs, llik_samples_1, type="l", col="gray", main="llik samples, cov")
+matlines(test_info_1$inputs, llik_true_1, col="red")
+matpoints(design_info_1$inputs, llik_design_1, col="red", pch="o")
 
 ```
+
+# Testing llikSumEmulator and llikEmulatorMultGausGP Classes using 2D output example. 
+
+```{r}
+# First fit GP emulator. 
+gp2 <- gpWrapperHet(design_info$inputs, design_info$outputs[,2,drop=FALSE], normalize_output=TRUE, scale_input=TRUE)
+gp2$fit("Gaussian", "constant")
+```
+
+
+```{r}
+# TODO: check issue with Matern kernel. 
+# Predict. 
+gp2$plot_pred_1d(test_info$inputs, Y_new=test_info$outputs[,2,drop=FALSE])
+```
+
+```{r}
+# Create llikEmulatorMultGausGP object, fixing sig2 this time. 
+llik_emulator2 <- llikEmulatorMultGausGP(gp1, N_obs=sum(!is.na(Y[,2])), sig2=sig2_true[2], 
+                                         default_conditional=FALSE, default_normalize=TRUE, 
+                                         lik_par_fixed=TRUE)
+llik_design_2 <- llik_emulator2$assemble_llik(design_info$outputs[,2,drop=FALSE])
+```
+
+```{r}
+# Sample llik emulator: not using cross-input covariance. 
+llik_samples_2 <- llik_emulator2$sample(test_info$inputs, N_samp=10, use_cov=FALSE, include_nugget=TRUE)
+                                        
+
+matplot(test_info$inputs, llik_samples_2, type="l", col="gray", main="llik samples, no-cov")
+matlines(test_info$inputs, llik_true[,2], col="red")
+matpoints(design_info$inputs, llik_design_2, col="red", pch="o")
+
+# Sample llik_emulator: using cross-input covariance.
+llik_samples_2 <- llik_emulator2$sample(test_info$inputs, N_samp=10, use_cov=TRUE, 
+                                        include_nugget=TRUE)
+
+matplot(test_info$inputs, llik_samples_2, type="l", col="gray", main="llik samples, cov")
+matlines(test_info$inputs, llik_true[,2], col="red")
+matpoints(design_info$inputs, llik_design_2, col="red", pch="o")
+
+```
+
+
+
+
+
 
 
 
